src/styles/global.css
@import "tailwindcss";
@import "tailwindcss-intersect";
@plugin '@tailwindcss/typography';
@plugin "tailwindcss-motion";
@plugin "daisyui";
@plugin "daisyui/theme" {
  name: "sanctopia";
  default: false;
  prefersdark: false;
  color-scheme: "light";
  --color-base-100: #FFFBF4;
  --color-base-200: #F8F0E3;
  --color-base-300: #C2B7A5;
  --color-base-content: #655A50;
  --color-primary: #C2A97F;
  --color-primary-content: oklch(42% 0.095 57.708);
  --color-secondary: #392C25;
  --color-secondary-content: #D9D9D9;
  --color-accent: #0D232A;
  --color-accent-content: #B6C6CC;
  --color-neutral: #F8F0E3;
  --color-neutral-content: #655A50;
  --color-info: oklch(70% 0.14 182.503);
  --color-info-content: oklch(38% 0.063 188.416);
  --color-success: oklch(76% 0.233 130.85);
  --color-success-content: oklch(40% 0.101 131.063);
  --color-warning: oklch(90% 0.182 98.111);
  --color-warning-content: oklch(41% 0.112 45.904);
  --color-error: oklch(70% 0.213 47.604);
  --color-error-content: oklch(25% 0.092 26.042);
  --radius-selector: 1rem;
  --radius-field: 0.5rem;
  --radius-box: 3rem;
  --size-selector: 0.25rem;
  --size-field: 0.25rem;
  --border: 1px;
  --depth: 1;
  --noise: 0;
}

@theme {
  --font-serif: 'Cormorant Garamond Variable', 'serif';
  --font-sans: 'Catamaran Variable', 'sans-serif';
  --color-gold: #C2A97F;
  --color-brown: #392C25;
  --color-dark-green: #0D1619;
}

.wave-container::before {   
  content: "";
  width: 100%;
  height: 120px;
  position: absolute;
  bottom: -0.5px;
  left: 0;
  background-size: auto;
  background-repeat: repeat no-repeat;
  background-position: 50vw bottom;
  background-color: var(--color-dark-green);
  background-image: url("data:image/svg+xml;utf8,<svg viewBox='0 0 1200  99' fill='none' xmlns='http://www.w3.org/2000/svg'><path d='M0 72L50 68C100 63 200 55 300 37C400 19 500 -8 600 1C700 10 800 55 900 72C1000 90 1100 81 1150 77L1200 72V99H1150C1100 99 1000 99 900 99C800 99 700 99 600 99C500 99 400 99 300 99C200 99 100 99 50 99H0V72Z' fill='%23C2B7A5'/></svg>");
}

.btn {
  @apply uppercase border-none transition;
}

.btn:hover {
  transform: scale(1.05)
}

.btn-xl {
  @apply px-12 py-8 text-base shadow-xl;
}

.h2 {
  @apply text-gold text-3xl lg:text-5xl uppercase font-serif font-bold;
}

.title {
  @apply text-gold text-5xl lg:text-6xl font-bold uppercase font-serif leading-[0.6] lg:leading-[0.8];
}

.suptitle {
  @apply text-gold text-lg lg:text-xl font-bold uppercase font-serif;
}

.subtitle {
  @apply text-brown text-lg lg:text-2xl uppercase font-serif
}

